# MiAM_eurobot2019

./: .gitignore  README.md
ArduinoFunnyAction/: ArduinoFunnyAction.ino
ArduinoSlave/: ArduinoSlave.ino
CodeGeneration/: CMakeLists.txt
CodeGeneration/src/: generate_solver.cpp  generate_solver_velocity_control.cpp
Code_BBB/: README.md
Code_BBB/BBBEurobot/: CMakeLists.txt
Code_BBB/BBBEurobot/src/: ADNS9800Driver.c  Ax12Driver.c  I2C-Wrapper.c  IMUDriver.c  L6470Driver.c  Logger.c  MPC23017Driver.c  PCAServoDriver.c  SPI-Wrapper.c  TCS3472ColorSensorDriver.c
Code_BBB/EurobotCode/include/: Robot.h
Code_BBB/EurobotCode/src/: Localisation.c  MainLoop.c  Robot.c  Strategy.c
ConfigRPi/: README.md  dhcpcd.conf  dnsmasq.conf  hostapd.conf
Electronics/: MainRobot-Wiring.odg  README.md
Electronics/LCDButtons/: LCLDButtons.kicad_pcb  LCLDButtons.pro  LCLDButtons.sch  sym-lib-table
Electronics/PowerDistribution/: PowerDistribution.kicad_pcb  PowerDistribution.pro  PowerDistribution.sch  fp-lib-table  sym-lib-table
Electronics/RPiShield/: RPiShield.kicad_pcb  RPiShield.pro  RPiShield.sch
Electronics/USBLCDFirmware/: USBLCDFirmware.cpp.hex  USBLCDFirmware.ino
MPC/CodeGeneration/: CMakeLists.txt
MPC/CodeGeneration/src/: generate_solver.cpp
MPC/PathPlanner/: .gitignore  CMakeLists.txt
MPC/PathPlanner/custom_solver/include/: acado_auxiliary_functions.h  acado_common.h  acado_qpoases_interface.hpp
MPC/PathPlanner/custom_solver/src/: acado_auxiliary_functions.c  acado_integrator.c  acado_qpoases_interface.cpp  acado_solver.c
MPC/PathPlanner/include/: miam_pp_base.hpp
MPC/PathPlanner/src/: hello_world.cpp  miam_pp_base.cpp  miam_pp_custom_solver.cpp
MPC/PathPlanner/tests/: basic_test.cpp  test_code_generation.c
MPC/SimpleMPC/: CMakeLists.txt  SimpleMPC
MPC/SimpleMPC/src/: test.cpp
PathPlanner/: .gitignore  CMakeLists.txt
PathPlanner/example_trajectories/: curved_trajectory  straight_trajectory  zigzag_trajectory
PathPlanner/include/: hello_world.hpp  miam_pp.hpp  miam_pp_base.hpp
PathPlanner/src/: miam_pp_base.cpp
PathPlanner/tests/: basic_test.cpp  generate_curved_trajectory.cpp  generate_straight_trajectory.cpp  generate_zigzag_trajectory.cpp  generate_zigzag_trajectory_2.cpp  generate_zizag_trajectory.cpp  io_test.cpp
RobotCode/: README.md
RobotCode/DrivetrainTest/: CMakeLists.txt
RobotCode/DrivetrainTest/include/: Robot.h  uCListener.h
RobotCode/DrivetrainTest/src/: Localisation.c  MainLoop.c  Robot.cpp  uCListener.c
RobotCode/EurobotCode/: CMakeLists.txt
RobotCode/EurobotCode/include/: Localisation.h  Robot.h
RobotCode/EurobotCode/src/: Robot.c
RobotCode/HardwareTests/: CMakeLists.txt
RobotCode/HardwareTests/src/: GPIOTest.cpp  L6470Test.cpp  L6470VelocityControlTest.cpp  MaestroTest.cpp  RPLidarTest.cpp  USBLCDTest.cpp  VL53L0XTest.cpp
RobotCode/MPCTests/: CMakeLists.txt
RobotCode/MPCTests/tests/: test_simulation_MPC.cpp
RobotCode/MainRobotCode/: CMakeLists.txt
RobotCode/MainRobotCode/custom_solver/: acado_auxiliary_functions.c  acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c
RobotCode/MainRobotCode/include/: Experiment.h  LoggerFields.h  MPC.h  Robot.h  ServoConfig.h  ServoHandler.h  uCListener.h
RobotCode/MainRobotCode/src/: Experiment.cpp  MPC.cpp  MainLoop.c  MainLoop.cpp  Robot.cpp  Robot_Detection.cpp  Robot_MotionControl.cpp  ServoHandler.cpp  Strategy.cpp  uCListener.c  uCListener.cpp
RobotCode/MiAMEurobot/: CMakeLists.txt  MiAMEurobotTemplate.pc
RobotCode/MiAMEurobot/doc/: Mainpage.dox
RobotCode/MiAMEurobot/include/MiAMEurobot/: AbstractRobot.h  KalmanFilter.h  Logger.h  Metronome.h  MiAMEurobot.h  PID.h  RPLidarHandler.h
RobotCode/MiAMEurobot/include/MiAMEurobot/beaglebone/: BBBGpio.h  BeagleboneBlack.h  BeagleboneCape.h
RobotCode/MiAMEurobot/include/MiAMEurobot/drivers/: ADNS9800Driver.h  I2C-Wrapper.h  IMUDriver.h  L6470Driver.h  LCDDriver.h  MPC23017Driver.h  MaestroServoDriver.h  PCA9635Driver.h  SPI-Wrapper.h  TCS3472ColorSensorDriver.h  UART-Wrapper.h  USBLCDDriver.h  VL53L0XDriver.h  dualL6470Driver.h
RobotCode/MiAMEurobot/include/MiAMEurobot/io/: IOTrajectory.h
RobotCode/MiAMEurobot/include/MiAMEurobot/raspberry_pi/: RPiGPIO.h  RaspberryPi.h
RobotCode/MiAMEurobot/include/MiAMEurobot/trajectory/: ArcCircle.h  DrivetrainKinematics.h  PointTurn.h  RobotPosition.h  SampledTrajectory.h  StraightLine.h  Trajectory.h  Trapezoid.h  Utilities.h
RobotCode/MiAMEurobot/src/: AbstractRobot.cpp  KalmanFilter.c  Logger.c  Logger.cpp  Metronome.c  Metronome.cpp  PID.cpp  RPLidarHandler.cpp
RobotCode/MiAMEurobot/src/beaglebone/: BBBGpio.c  BeagleboneCape.c
RobotCode/MiAMEurobot/src/drivers/: ADNS9800Driver.c  I2C-Wrapper.c  IMUDriver.c  L6470Driver.c  L6470Driver.cpp  L6470Registers.h  LCDDriver.c  LCDDriver.cpp  MPC23017Driver.c  MaestroServoDriver.c  MaestroServoDriver.cpp  PCA9635Driver.c  SPI-Wrapper.c  TCS3472ColorSensorDriver.c  UART-Wrapper.c  USBLCDDriver.cpp  VL53L0X.cpp  dualL6470Driver.c
RobotCode/MiAMEurobot/src/io/: IOTrajectory.cpp
RobotCode/MiAMEurobot/src/raspberry_pi/: PiGPIO.c  PiGPIO.cpp  RaspberryPi.c
RobotCode/MiAMEurobot/src/trajectory/: ArcCircle.cpp  DrivetrainKinematics.cpp  PointTurn.cpp  RobotPosition.cpp  SampledTrajectory.cpp  StraightLine.cpp  Trajectory.cpp  Trapezoid.cpp  Utilities.cpp
RobotCode/SecondaryRobotCode/: CMakeLists.txt
RobotCode/SecondaryRobotCode/include/: LoggerFields.h  Robot.h
RobotCode/SecondaryRobotCode/src/: MainLoop.cpp  Robot.cpp  Robot_MotionControl.cpp  Strategy.cpp
RobotCode/TestSensors/include/: TestSensors.h
RobotCode/TestSensors/src/: Main.c  TestSensors.c
StrategyViewer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  strategyViewer
StrategyViewer/config/: MainWindow.glade
StrategyViewer/include/: Strategy.h  Viewer.h  ViewerRobot.h
StrategyViewer/src/: Main.cpp  MainRobotStrategy.cpp  SecondaryRobotStrategy.cpp  Viewer.cpp  ViewerRobot.cpp
miam_py/: README.md  setup.py
miam_py/scripts/: miam_analyse_tracking  miam_plot
(+3 files in other folders)
